@@ -12,7 +12,7 @@ ADD `mode_ln` enum('Y','N') NOT NULL default 'N',
 ADD `mode_lp` enum('Y','N') NOT NULL default 'N',
 ADD `mode_lq` enum('Y','N') NOT NULL default 'N',
 ADD `mode_lr` enum('Y','N') NOT NULL default 'N',
-ADD `mode_ls` enum('Y','N') NOT NULL default 'N',
+ADD `mode_ls` enum('Y','N') NOT NULL default 'Y',
 ADD `mode_lt` enum('Y','N') NOT NULL default 'N',
 ADD `mode_ua` enum('Y','N') NOT NULL default 'N',
 ADD `mode_uf` enum('Y','N') NOT NULL default 'N',
