@@ -13,7 +13,7 @@ ADD `mode_lm` enum('Y','N') NOT NULL default 'N',
 ADD `mode_ln` enum('Y','N') NOT NULL default 'N',
 ADD `mode_lp` enum('Y','N') NOT NULL default 'N',
 ADD `mode_lr` enum('Y','N') NOT NULL default 'N',
-ADD `mode_ls` enum('Y','N') NOT NULL default 'N',
+ADD `mode_ls` enum('Y','N') NOT NULL default 'Y',
 ADD `mode_lt` enum('Y','N') NOT NULL default 'N',
 ADD `mode_lu` enum('Y','N') NOT NULL default 'N',
 ADD `mode_lz` enum('Y','N') NOT NULL default 'N',
